--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,10 @@
 }
 
 #sales_chatbot_root {
-  /*width: 100vw;*/
-  /*height: 100vh;*/
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  pointer-events: none;
   overflow: hidden;
 }
 
